# ServiceManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ManagerApp/: CMakeLists.txt  app_config.json  template_config.json
ManagerApp/include/: AppConfigHandler.hpp  ConfigHandler.hpp  IConfigHandler.hpp  ServiceHandler.hpp  ServicesConfigHandler.hpp
ManagerApp/src/: AppConfigHandler.cpp  CMakeLists.txt  ConfigHandler.cpp  ServiceHandler.cpp  main.cpp
ManagerApp/tests/: CMakeLists.txt  test_appConfigHandler.cpp
